small changes to proxy

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,16 +20,16 @@
       </header>
     <div class="login">
     <main class="container">
-        <h2>Login</h2>
+        <h2>Online Banking</h2>
         <form action="/login" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
-                    placeholder="Enter Your Username">
+                    placeholder="Anmeldename">
                 <div class="underline"></div>
             </div>
             <div class="input-field">
                 <input type="password" name="password" id="password"
-                    placeholder="Enter Your Password">
+                    placeholder="Passwort/PIN">
                 <div class="underline"></div>
             </div>
             <div><br></div>
